[package]
name = "transfer"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"

[profile.dev]
opt-level = "z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", feature = "derive" }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.2", features = ["codec"] }
futures = "0.3"
